--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage",
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,11 @@
   },
   "homepage": "https://github.com/Arthur-Lozano/lab-02#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "jest": "^26.6.3",
+    "method-override": "^3.0.0",
+    "nodemon": "^2.0.7",
     "supertest": "^6.1.3"
   }
 }
